Revision history for Perl extension Finance-Robinhood

{{$NEXT}}

0.13 2016-12-25T19:41:16Z

	- Fix adding single instrument to watchlist

0.12 2016-12-02T21:42:01Z

    - Update eg/buy.pl for minor API change

0.11 2016-10-10T16:41:23Z

    - RH's API server stopped updating the /markets/ endpoint on July 30th.
    - ::Market::Hours now exposes extended trading hours

0.10 2016-08-27T16:37:13Z

    - New Finance::Robinhood::Portfolio class for current and historical info
    - New ::Robinhood->portfolios() method to get paginated list of portfolios
    - New ::Robinhood->markets() method to get a paginated list of supported
        markets as Finance::Robinhood::Market objects
    - New ::Robinhood::Market->new(...) constructor to get an object representing a
        specific exchange. Use the ISO 10383 MIC. ...see the docs for more.
    - New ::Order->refresh() method
    - Fix: Coerced dates are now parsed correctly
    - Fix: JSON decoder is now wrapped by Try::Tiny

0.09 2016-08-12T01:24:57Z

    - Breaking change: Finance::Robinhood::quote(...) always returns paginated list

0.08 2016-06-27T19:49:09Z

    - Updating several examples due to API changes and (mostly) lazy bugs
    - Though meaningless for market orders, the 'price' value is now required by the API
        If it's missing in your call to ::Order->new(...), quote data is requested for
        the instrument and the current bid price is used.

0.07 2016-05-29T20:46:30Z

	- Historical quotes correctly request a defined span
	- Example script found at eg/export_orders.pl only exports executed orders by default
	    - Override this with --all

0.06 2016-04-29T22:05:28Z

    - ::Order->executions() was dropping all but timestamp and settlement_date
    - Next and previous cursor information was leaking in paginated data
    - New demo script: eg/export_orders.pl
        - Grabs entire order history and writes it to a file or STDOUT as CSV

0.05 2016-04-04T01:53:58Z
