@@ -2,6 +2,8 @@ Revision history for Perl extension Finance-Robinhood
 
 {{$NEXT}}
 
+    - Use Time::Piece if loaded (fallback to DateTime)
+
 0.13 2016-12-25T19:41:16Z
 
 	- Fix adding single instrument to watchlist
